--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,13 @@ project(SDKTOOLS
 	HOMEPAGE_URL "https://github.com/northwindtraders/beicode"
 	LANGUAGES CXX)
 
+find_package(spdlog CONFIG REQUIRED)
+find_package(fmt CONFIG REQUIRED)
+
 add_executable(SDKTOOLS 	Source.cpp)
 target_include_directories(SDKTOOLS PRIVATE wu_camera-sdk/inc)
 target_link_directories(SDKTOOLS PRIVATE wu_camera-sdk/lib)
+target_link_libraries(SDKTOOLS PRIVATE spdlog::spdlog_header_only)
+target_link_libraries(SDKTOOLS PRIVATE fmt::fmt-header-only)
+
 target_compile_features(SDKTOOLS PRIVATE cxx_std_17)
