add second for restart

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,3 +28,4 @@ target_compile_features(SDKTOOLS PRIVATE cxx_std_17)
 
 set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/bin)
 install (TARGETS SDKTOOLS RUNTIME DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/bin)
+install(FILES $<TARGET_PDB_FILE:${PROJECT_NAME}> DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/bin OPTIONAL)
